[gd_scene load_steps=33 format=3 uid="uid://drxu5atyc48fh"]

[ext_resource type="Script" path="res://scenes/astronaut.gd" id="1_65tvb"]
[ext_resource type="Texture2D" uid="uid://7425xc3nfclp" path="res://assets/astronaut-booster-1.png" id="1_r35v2"]
[ext_resource type="Texture2D" uid="uid://bgifshr0gagwr" path="res://assets/astronaut-booster-2.png" id="2_iitx5"]
[ext_resource type="Texture2D" uid="uid://b8rmb4a1wtis8" path="res://assets/astronaut-booster-3.png" id="3_uutk5"]
[ext_resource type="Texture2D" uid="uid://c80vys54t0xc1" path="res://assets/astronaut-death.png" id="5_hiku6"]
[ext_resource type="Texture2D" uid="uid://cwyiup11rb3nl" path="res://assets/astronaut-idle.png" id="5_y8cpy"]
[ext_resource type="Texture2D" uid="uid://c80de7j0j1ycp" path="res://assets/astronaut-mining-1.png" id="7_5576r"]
[ext_resource type="AudioStream" uid="uid://igg1aqoou8bt" path="res://assets/sounds/JetPackSustained_FullSustained_Variant1.mp3" id="7_p3fv6"]
[ext_resource type="AudioStream" uid="uid://v4cxusb3505a" path="res://assets/sounds/JetPackOff_Variant1.wav" id="8_10d77"]
[ext_resource type="Texture2D" uid="uid://gnqtv3aar7jg" path="res://assets/astronaut-mining-2.png" id="8_83cru"]
[ext_resource type="Texture2D" uid="uid://dysit8dwulymf" path="res://assets/astronaut-mining-3.png" id="9_bkx3h"]
[ext_resource type="AudioStream" uid="uid://c67dbklwotfh8" path="res://assets/sounds/JetPackIgnition_Variant1.wav" id="9_riaax"]
[ext_resource type="Texture2D" uid="uid://cd6nyglglhw56" path="res://assets/astronaut-mining-4.png" id="10_6t8j6"]
[ext_resource type="AudioStream" uid="uid://ev28038q38a1" path="res://assets/sounds/LandingImpact_Variant1.wav" id="10_jcfyc"]
[ext_resource type="AudioStream" uid="uid://loyqtlkewt0b" path="res://assets/sounds/VelocityAltitudeAlarm_Variant1.wav" id="11_0a288"]
[ext_resource type="Texture2D" uid="uid://b0pkfndb0l38m" path="res://assets/astronaut-mining-5.png" id="11_rbwqa"]
[ext_resource type="Texture2D" uid="uid://dj44esx6o8nnc" path="res://assets/astronaut-mining-6.png" id="12_3oawy"]
[ext_resource type="AudioStream" uid="uid://dxbpvc0rm5vqk" path="res://assets/sounds/DeathImpact_GameJam2024_SFX_V1.wav" id="12_6af58"]
[ext_resource type="Texture2D" uid="uid://cdncx5e3fn6q0" path="res://assets/astronaut-mining-7.png" id="13_3jip5"]
[ext_resource type="AudioStream" uid="uid://bxsvpssw07dgb" path="res://assets/sounds/CrystalAcquired_Var3_GameJam2024_SFX_V1.wav" id="13_asv8u"]
[ext_resource type="Texture2D" uid="uid://b38pxgpvltffe" path="res://assets/astronaut-mining-8.png" id="14_fllbj"]
[ext_resource type="AudioStream" uid="uid://cdx6idipdmwgp" path="res://assets/sounds/CrystalAmbience_GameJam2024_SFX_V2.wav" id="14_llhf1"]
[ext_resource type="Texture2D" uid="uid://bdqugnfprms8b" path="res://assets/astronaut-mining-9.png" id="15_6ci3c"]
[ext_resource type="Texture2D" uid="uid://c1lwjigyxsnt2" path="res://assets/astronaut-mining-10.png" id="16_1x4lc"]
[ext_resource type="Texture2D" uid="uid://ckvw5xtjmt23x" path="res://assets/astronaut-mining-11.png" id="17_slpiv"]
[ext_resource type="Texture2D" uid="uid://d0om7rdba5m8u" path="res://assets/astronaut-mining-12.png" id="18_5iu0w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wwv17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uutk5")
}, {
"duration": 1.0,
"texture": ExtResource("2_iitx5")
}, {
"duration": 1.0,
"texture": ExtResource("1_r35v2")
}, {
"duration": 1.0,
"texture": ExtResource("2_iitx5")
}],
"loop": true,
"name": &"boosting",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hiku6")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_y8cpy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_5576r")
}, {
"duration": 1.0,
"texture": ExtResource("8_83cru")
}, {
"duration": 1.0,
"texture": ExtResource("9_bkx3h")
}, {
"duration": 1.0,
"texture": ExtResource("10_6t8j6")
}, {
"duration": 1.0,
"texture": ExtResource("11_rbwqa")
}, {
"duration": 1.0,
"texture": ExtResource("12_3oawy")
}, {
"duration": 1.0,
"texture": ExtResource("13_3jip5")
}, {
"duration": 1.0,
"texture": ExtResource("14_fllbj")
}, {
"duration": 1.0,
"texture": ExtResource("15_6ci3c")
}, {
"duration": 1.0,
"texture": ExtResource("16_1x4lc")
}, {
"duration": 1.0,
"texture": ExtResource("17_slpiv")
}, {
"duration": 1.0,
"texture": ExtResource("18_5iu0w")
}, {
"duration": 1.0,
"texture": ExtResource("17_slpiv")
}, {
"duration": 1.0,
"texture": ExtResource("16_1x4lc")
}, {
"duration": 1.0,
"texture": ExtResource("15_6ci3c")
}, {
"duration": 1.0,
"texture": ExtResource("16_1x4lc")
}, {
"duration": 1.0,
"texture": ExtResource("17_slpiv")
}, {
"duration": 1.0,
"texture": ExtResource("18_5iu0w")
}, {
"duration": 1.0,
"texture": ExtResource("17_slpiv")
}, {
"duration": 1.0,
"texture": ExtResource("16_1x4lc")
}, {
"duration": 1.0,
"texture": ExtResource("15_6ci3c")
}, {
"duration": 1.0,
"texture": ExtResource("14_fllbj")
}, {
"duration": 1.0,
"texture": ExtResource("13_3jip5")
}, {
"duration": 1.0,
"texture": ExtResource("12_3oawy")
}, {
"duration": 1.0,
"texture": ExtResource("11_rbwqa")
}, {
"duration": 1.0,
"texture": ExtResource("10_6t8j6")
}, {
"duration": 1.0,
"texture": ExtResource("9_bkx3h")
}, {
"duration": 1.0,
"texture": ExtResource("8_83cru")
}, {
"duration": 1.0,
"texture": ExtResource("7_5576r")
}],
"loop": true,
"name": &"mining",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ldwy"]
radius = 7.0
height = 28.0

[sub_resource type="Gradient" id="Gradient_ni7kc"]
offsets = PackedFloat32Array(0, 0.16185, 1)
colors = PackedColorArray(0, 1, 1, 1, 1, 0.611765, 0, 1, 1, 0.423529, 0.00784314, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3h5uj"]
gradient = SubResource("Gradient_ni7kc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hicmm"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(3, 0, 3)
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_3h5uj")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vse8n"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
gravity = Vector3(0, 0, -1)
color = Color(1, 0, 0, 1)

[node name="Astronaut" type="CharacterBody2D"]
script = ExtResource("1_65tvb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wwv17")
animation = &"mining"
frame_progress = 0.102576

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_6ldwy")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-6, 3)
amount = 50
process_material = SubResource("ParticleProcessMaterial_hicmm")
lifetime = 0.75

[node name="SoundJetpackLoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_p3fv6")

[node name="SoundJetpackOff" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_10d77")

[node name="SoundJetpackOn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_riaax")

[node name="SoundLanding" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_jcfyc")

[node name="SoundVelocityAltitudeAlarm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_0a288")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 8)
amount = 20
process_material = SubResource("ParticleProcessMaterial_vse8n")
lifetime = 5.0

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_6af58")

[node name="SoundCrystalAcquired" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_asv8u")

[node name="SoundRing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_llhf1")
